 -- sacct - allocations made by srun will now always display the allocation and
    step(s). Previously, the allocation and step were combined when possible.
 -- cons_tres - change definition of the "least loaded node" (LLN) to the
    node with the greatest ratio of available cpus to total cpus.
 -- Add support to ship Include configuration files with configless.

CONFIGURATION FILE CHANGES (see appropriate man page for details)
=====================================================================
 -- AcctGatherEnergyType 'rsmi' is now 'gpu'.
 -- TaskAffinity parameter was removed from cgroup.conf.
 -- Fatal if the mutually-exclusive JobAcctGatherParams options of UsePss and
    NoShared are both defined.
 -- KeepAliveTime has been moved into CommunicationParameters. The standalone
    option will be removed in a future version.
 -- preempt/qos - add support for WITHIN mode to allow for preemption between
    jobs within the same qos.
 -- Fatal error if CgroupReleaseAgentDir is configured in cgroup.conf. The
    option has long been obsolete.
 -- Fatal if more than one burst buffer plugin is configured.
 -- Added keepaliveinterval and keepaliveprobes to CommunicationParameters.
 -- Added new max_token_lifespan=<seconds> to AuthAltParameters to allow sites
    to restrict the lifespan of any requested ticket by an unprivileged user.

COMMAND CHANGES (see man pages for details)
===========================================
 -- Remove support for (non-functional) --cpu-bind=boards.
 -- Added --prefer option at job submission to allow for 'soft' constraints.
 -- Add "condflags=open" to sacctmgr show events to return open/currently down
    events.
 -- sacct -f flag implies -c flag.
 -- srun --overlap now allows the step to share all resources (CPUs, memory, and
    GRES), where previously --overlap only allowed the step to share CPUs with
    other steps.

API CHANGES
===========
 -- openapi/v0.0.35 - Plugin has been removed.