@@ -63,6 +63,8 @@ HIGHLIGHTS
  -- cons_tres - change definition of the "least loaded node" (LLN) to the
     node with the greatest ratio of available cpus to total cpus.
  -- Add support to ship Include configuration files with configless.
+ -- Provide a detailed reason in the job log as to why it has been terminated
+    when hitting a resource limit.
 
 CONFIGURATION FILE CHANGES (see appropriate man page for details)
 =====================================================================
